--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
-    "express-react-views": "^0.11.0"
+    "express-react-views": "^0.11.0",
+    "nodemon": "^2.0.22"
   }
 }
