--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.13.15",
     "nodemon": "^2.0.22"
   }
 }
